last leçon in French class with monsieur Piseth

--- a/french/french.org
+++ b/french/french.org
@@ -1003,7 +1003,40 @@ Activité 18
 5. couverture =cover, blanket=
 6. écoeurement  ==
 
-** séance 30
+** séance 30: ai-au-ail-ain-aim
+
+oi-oin-ou-our-oeu-œu-œur
+
+Activitè 19
+1. Travailler avec Paul
+2. Un essaim des abeilles
+3. L'araignèe sur le mur
+4. convaincre les électuers
+5. j'ai mal à mon èpaule.
+
+Activitè 20
+1. automne   =autumn=
+2. faim      =hugry=
+3. écrivain  =author=
+4. lampadaire =street lamp=
+5. pailles   =straw=
+
+Lecture
+1. le vent de l'automne.    =air autumn=
+2. les lampadaires dans la rue.
+3. un écrivain très célèbre.
+4. je voudrais une paille.
+5. maintenant, j'ai faim.
+
+Activité 21
+1. formulaire
+2. autrement
+3. bataille
+4. contemporain
+5. meurt-de-îaim
+	 
+	 
+
 ** séance 31
 
 | é  | អេ |                |
@@ -1260,3 +1293,41 @@ Activité 3
 
 | copain | =boyfriend= |
 |        |             |
+
+
+
+
+
+* Leçon 4: Lecture des phrase
+** séance 39
+
+- une espace
+- une epsace avec liaison
+- une espace avec enchainement
+
+Activité 4
+1. Je suis infirmière dans un hôpital.
+2. Tu es architecte dans une entreprise.
+3. Il est à Paris maintenant.
+4. Cet homme travaille dans un hôtel.
+
+Activité 2:
+1. J'ai maintenant vingt-et-un ans. (D)
+2. actuellement, nous habitons à Phnom Penh.
+3. je suis ètudiant à L'ITC.
+4. Bonjour, je m'apelle
+5. enchanté et merci de votre attention.
+
+Activité 3: Information personnelles
+1. Bonjour, je m'apelle Daro.
+2. J'ai maintenant vingt-et-un ans. (D)
+3. Je suis ètudiant à L'ITC.
+4. Dans ma famille, il y a mon papa, ma maman et moi.
+5. Actuellement, nous habitons à Phnom Penh.
+6. Enchanté et merci de votre attention.
+
+*Petit texte de présantation*
+Bonjour, je m'appelle Daro. J'ai maintenant vingt-et-un ans.
+Je suis cambodgien et étudiant à l'ITC. Dans ma famille,
+il y a mon papa, ma maman, ma soeur et moi. Actuellement,
+nous habitons à Phnom Penh. Enchanté et merci de votre attention.
