--- a/real-analysis/real.tex
+++ b/real-analysis/real.tex
@@ -125,7 +125,6 @@ A long the way, we're introduced \emph{bounded sets.}
   has a supremum.
 \end{axiom}
 % <==
-% <==
 % ==> abs convergence
 \newpage
 \begin{example}
@@ -151,7 +150,9 @@ A long the way, we're introduced \emph{bounded sets.}
   \[\abs{x-x_0}<\delta\implies\abs{f(x)-f(y)}<\epsilon.\]
 \end{definition}
 % <==
+% <==
 
+% ==> basic topology
 \chapter{Basic Topology}
 
 Let $E$ be a set of real numbers.
@@ -205,6 +206,7 @@ Let $E$ be a set of real numbers.
     \end{itemize}
   \end{multicols}
 \end{example}
+% <==
 
 
 
