--- a/linear-algebra/td.tex
+++ b/linear-algebra/td.tex
@@ -15,6 +15,7 @@
 
 
 \begin{document}
+% ==> 1. basic
 \chapter{Basic Notions}
 % ==> Vector Spaces
 \section{Vector Spaces}
@@ -1806,7 +1807,8 @@ multiplication (as proved above).
 \end{proof}
 % <==
 % <==
-
+<==
+% ==> 2. Matrix
 \chapter{Systems of linear equations}
 
 % ==> intro
@@ -2233,7 +2235,730 @@ multiplication (as proved above).
 % <==
 
 % <==
+% <==
+% ==> 3. Determinant
+\chapter{Determinant}
+\setcounter{section}{2}
+\section{Constructing the determinant}
+% ==> ex4
+\setcounter{exercise}{3}
+\begin{exercise}
+  A square $(n\times n)$ matrix is called skew-symmetric 
+  (or antisymmetric) if $A\tran = -A$. Prove that if $A$ is 
+  skew-symmetric and $n$ is odd, then $\det A=0$. Is it
+  true for even $n$?
+\end{exercise}
+\begin{proof}
+  When $n$ is odd, we have
+  \begin{align*}
+    \det A=\det A\tran=\det (-A)=(-1)^n\det A=-\det A
+  \end{align*}
+  This implies that $\det A=0$ whenever $n$ is odd. For even $n$,
+  the determinant $\det A$ doestn't neccessarily zero, for instance
+  \[ B=\begin{pmatrix} 0&-1\\1&0 \end{pmatrix} \]
+  is a skew-symmetric matrix, yet $\det B=1$.
+\end{proof}
+% <==
+% ==> ex5
+\begin{exercise}
+  A square matrix is called \emph{nilpoten} if $A^k=0$
+  for some $k\in\N$. Show that if $A$ is nilpoten, then
+  $\det A=0$.
+\end{exercise}
+\begin{proof}
+  We use the property of determinant,
+  \[ \det 0=\det A^k=(\det A)^k \]
+  This shows that $\det A=0$.
+\end{proof}
+% <==
+% ==> ex6
+\begin{exercise}
+  Prove that if the matrices $A$ and $B$ are similar,
+  then $\det A=\det B$.
+\end{exercise}
+\begin{proof}
+  Since $A\sim B$, hence there's invertable $Q$ such that
+  $A=QBQ\inv$. Therefore
+  \begin{align*}
+    \det A=\det QBQ\inv
+    &=(\det Q)(\det B)(\det Q\inv)\\
+    &=\det(Q)(\det Q\inv)(\det B)=\det(QQ\inv)(\det B)\\
+    &=\det B.
+  \end{align*}
+\end{proof}
+% <==
+% ==> ex7
+\begin{exercise}
+  A real square matrix $Q$ is called \emph{othogonal} if 
+  $Q\tran Q=I$. Prove that if $Q$ is a n orthogonal matrix
+  then $\det Q=\pm 1$.
+\end{exercise}
+\begin{proof}
+  We have
+  \[ 1=\det Q\tran Q=(\det Q\tran)(\det Q)=(\det Q)^2 \]
+  this implies that $\det Q=\pm 1.$
+\end{proof}
+% <==
 
+\section{Formal definition}
+% ==> ex2
+\setcounter{exercise}{1}
+\begin{exercise}
+  Let $P$ be a permutation matrix.
+  \begin{itemize}
+    \item Can you describe the corresponding linear
+      transformation?
+    \item Show that $P$ is invertable. Can you describe $P\inv$.
+    \item Show that for some $N>0$, $P^N=I$.
+  \end{itemize}
+\end{exercise}
+\begin{proof}
+  Suppose that $P$ is an $n\times n$ matrix.
+  \begin{itemize}
+    \item The linear transformation looks like it's swapping 
+      the axis in $\R^n$.
+    \item If we interchange columns of $P$, we'll get the indentity
+      matrix hence $\det P=\pm 1$. The direct computation shows that
+      $P\inv =P\tran$.
+    \item Because there are finitely many permutations, the sequence
+      $\{P^n\}$ will eventually have repetitions. Hence we're sure 
+      there is $i,j$ with $i>j$ such that $P^i=P^j$. Since $P$ is 
+      invertable, we can multiply both sides by $P^{-j}$. Therefore
+      \[P^{i-j}=I,\]
+      now choose $N:=i-j$ and this completes the proof.
+  \end{itemize}
+\end{proof}
+% <==
+% ==> ex3
+\begin{exercise}
+  Why is there an even number of permutations of $(1,2,\dots,9)$
+  and why are exactly half of them odd permutations?
+\end{exercise}
+\begin{proof}
+  There are $9!$ permutations of $(1,2,\dots,9)$, which is an even 
+  number. To prove that there are exactly half of them odd 
+  (and other half even) we consider a $9\times 9$ matrix $A$ with all 
+  the entries are $1$. The determinant is $\det A=0$. However,
+  \[
+    \det A=\sum_{\sigma\in\perm(9)}
+    a_{\sigma(1),1}\cdots a_{\sigma(n),n}\sign(\sigma)
+  \]
+  Since all the $a_{jk}=1$, we get 
+  \[\sum_{\sigma}\sign\sigma=\det A=0\]
+  Because there are even number of permutations, and
+  $\sign\sigma=\pm 1$ we must have half of them has $\sign=1$ and
+  the other half has $\sign=-1$.
+\end{proof}
+% <==
+
+\section{Cofactor}
+\section{Minor and rank}
+
+% ==> ex2
+\setcounter{exercise}{1}
+\begin{exercise}
+  Let $A$ be an $n\times n$ matrix. How are $\det(3A),~\det(-A)$
+  and $\det(A^2)$ related to $\det A$ ?
+\end{exercise}
+\begin{proof}
+  It follows immediately that 
+  \begin{align*}
+    &\det(-A)=(-1)^n\det A,\\
+    &\det(3A)=3^n\det A,\\
+    &\det(A^2)=(\det A)^2.
+  \end{align*}
+\end{proof}
+% <==
+% ==> ex3
+\begin{exercise}
+  If the entries of both $A$ and $A\inv$ are integers,
+  is it possible that $\det A=3$ ?
+\end{exercise}
+\begin{proof}
+  It's impossible. If it was such a case, we'll get 
+  $\det A\inv=1/\det A=1/3$. Since all the entries of $A\inv$ are
+  integers, so
+  \[
+    \det A\inv=\sum_{\sigma}a_{\sigma(1),1}\cdots 
+    a_{\sigma(n),n}\sign\sigma\in\Z
+  \]
+  which is a contradiction that $\det A\inv=1/3$.
+\end{proof}
+% <==
+% ==> ex4
+\begin{exercise}
+  Let $\vec{v_1},\vec{v_2}$ be vectors in $\R^2$ and let $A$ be the
+  $2\times 2$ matrix with columns $\vec{v_1},\vec{v_2}$. Prove that
+  $\abs{\det A}$ is the area of parallelogram with two sides given by
+  vectors $\vec{v_1}$ and $\vec{v_2}$.
+\end{exercise}
+\begin{proof}
+  Let $\alpha$ be angle between $\vec{v_1}$ and the $x$-axis, and
+  let $R$ be the matrix of rotation by $-\alpha$ angle. Denote
+  \[
+    \vec{\tilde{v}_1}:=R\vec{v_1}=(a,0)\quad\text{and}\quad
+    \vec{\tilde{v}_2}:=R\vec{v_2}=(b,c).
+  \]
+  for some reals $a,b,c$. 
+  Note that after the transformation, the area stays the same, i.e.
+  $\mathrm{area}(\vec{v_1},\vec{v_2})
+  =\mathrm{area}(\vec{\tilde{v}_1},\vec{\tilde{v}_2})$. It's easy 
+  to see that the area of the new parallelogram is 
+  \[\abs{ac}=\abs{\det (\vec{\tilde{v}_1},\vec{\tilde{v}_2})}\]
+  (it has  base $\abs{a}$, and height $\abs{c}$). But
+  \begin{align*}
+    \det(\vec{\tilde{v}_1},\vec{\tilde{v}_2})
+    &=\det(R\vec{v_1}, R\vec{v_2})=\det(RA)=\det A
+  \end{align*}
+  because $\det R=1$ (rotation matrix). This implies that the area of
+  the parallelogram is $\abs{\det A}$.
+\end{proof}
+% <==
+% ==> ex5
+\begin{exercise}
+  Let $\vec{v_1},\vec{v_2}$ be vectors in $\R^2$. Show that 
+  $\det(\vec{v_1},\vec{v_2})>0$ if and only if there's a rotation
+  $T_{\alpha}$ such that $T_{\alpha}\vec{v_1}$ parallel to $\vec{e_1}$
+  and $T_{\alpha}\vec{v_2}$ is in the upper half-plane.
+\end{exercise}
+\begin{proof}
+  \text{}
+  \begin{itemize}
+    \item[$(\Rightarrow)$] For this direction, the proof is almost 
+      identical to the previous exercise. We claim that 
+      $T_{\alpha}=R$ ($R$ defined in the previous exercise).
+      We now wanna show that $\vec{\tilde{v}_2}=(b,c)$ is in the 
+      upper-half plane, meaning $c>0$. But this immediately true 
+      from the fact that $a>0$ and
+      \[
+        0<\det(\vec{v_1},\vec{v_2})=
+        \det(\vec{\tilde{v}_1},\vec{\tilde{v}_2})=ac
+      \]
+    \item[$(\Leftarrow)$]
+  \end{itemize}
+\end{proof}
+% <==
+<==
+% ==> 4. spectral theory
+\chapter{Intro to Spectral Theory}
+
+\section{Main definition}
+% ==> ex1
+\begin{exercise}
+  True or false.
+  \begin{enumerate}[label={(\alph*)}]
+    \item Every linea operator in an $n$-dimensional vector space
+      has $n$ distinct eigenvalues;
+    \item If a matrix has on eigenvalue, it has infinitely many
+      eigenvectors;
+    \item There exists a square real matrix with no real eigenvalues;
+    \item There exists a square matrix with no (complex) eigenvectors;
+    \item Similar matrices always have the same eigenvalues;
+    \item Similar matrices always have the same eigenvectors;
+    \item The sum of two eigenvectors of a matrix $A$ is always an
+      eigenvector;
+    \item The sum of two eigenvectors of a matrix $A$ corresponding
+      to the same eigenvalue $\lambda$ is always an eigenvector.
+  \end{enumerate}
+\end{exercise}
+\begin{proof}[Solution]
+  \begin{enumerate}[label={(\alph*)}]
+    \item \textbf{false}
+    \item \textbf{true}. Suppose $\vec{v}$ be an eigenvector corresponding to 
+      the eigenvalue $\lambda$ of a matrix $A$, then 
+      $A\vec{v}=\lambda\vec{v}$. For any $\alpha\in\F$, we have
+      \[
+        A(\alpha\vec{v})=\alpha A\vec{v}=\alpha\lambda\vec{v}
+        =\lambda (\alpha\vec{v})
+      \]
+      hence $\alpha\vec{v}$ is also an eigenvector of $\lambda$.
+      Because of the choise of $\alpha$ is abitrary, we conclude that
+      it has infinitely many eigenvectors.
+    \item \textbf{true}. It's easy to see that the rotation matrix
+      $R_\gamma$ where $\gamma\neq n\pi$ has no real eigenvalue. 
+      Below, we present the special case when $\gamma=\pi/2$.
+      Namely, the rotation matrix about $90^\circ$ 
+      \[
+        A:=
+        \begin{pmatrix*}[r]
+          0 &-1\\ 1&0
+        \end{pmatrix*}.
+      \]
+      The characteristic polynomial 
+      \[\det(A-\lambda I)=(-\lambda)(-\lambda)+1=\lambda^2+1\]
+      has roots $\lambda=\pm i$, both roots are complex numbers.
+    \item \textbf{false.} From fundamental theorem of Algebra,
+      any polynomial with degrees greater than 2 always has
+      complex roots. So, there's always an eigenvalue in complex
+      space.
+    \item \textbf{true.} As proved in the text book, if matrices 
+      $A$ and $B$ are similar, then the determinant
+      \[\det(A-\lambda I)=\det(B-\lambda I)\]
+      therefore, $A$ and $B$ have the same eigenvalue.
+    \item \textbf{true and false.} Since $A\sim B$, they're basically the same
+      transformation but in different basis. We proved earlier that they have
+      the same eigenvalues, therefore the asbtract eigenvector corresponding to 
+      this eigenvalue is the same, but numerically different because of the 
+      basis we denote them.
+    \item \textbf{false.} There are plenty of counterexamples, the simplest one is
+      \[ A= \begin{pmatrix} 1&0\\ 0&2 \end{pmatrix} \]
+      having eigenvalues $\lambda_1=1$ and $\lambda_2=2$ with the corresponding
+      eigenvector 
+      \[
+        \begin{pmatrix} 1\\0 \end{pmatrix}
+        \quad\text{and}\quad
+        \begin{pmatrix} 0\\1 \end{pmatrix}
+      \]
+      however their sum 
+      $
+        \begin{pmatrix} 1\\0 \end{pmatrix}+
+        \begin{pmatrix} 0\\1 \end{pmatrix}=
+        \begin{pmatrix} 1\\1 \end{pmatrix}
+      $
+      is not an eigenvector.
+    \item \textbf{true.} Suppose that $\vec{v},\vec{w}$ are eigenvectors 
+      corresponding to an eigenvector $\lambda$. Then
+      \begin{align*}
+        &A\vec{v}=\lambda\vec{v}
+        \quad\text{and}\quad 
+        A\vec{w}=\lambda\vec{w}\\\implies\quad
+        &A(\vec{v}+\vec{w})=\lambda(\vec{v}+\vec{w})
+      \end{align*}
+      hence $\vec{v}+\vec{w}$ is also an eigenvector of $\lambda$.
+  \end{enumerate}
+\end{proof}
+% <==
+% ==> ex5
+\setcounter{exercise}{4}
+\begin{exercise}
+  Prove that eigenvalues (counting multiplicities) of a
+  triangular matrix coincide with its diagonal entries.
+\end{exercise}
+\begin{proof}
+  Let $\lambda_1,\lambda_2,\dots,\lambda_n$ be the diagonal entries of 
+  the triangular matrix $A$. Suppose that $A$ is upper triangular 
+  matrix,
+  \[
+    A=
+    \begin{pmatrix}
+      \lambda_1 & & & \vec{*}\\
+                & \lambda_2 & & &\\
+                & & \ddots  & & \\
+      \vec{0}   & & &  \lambda_4
+    \end{pmatrix}
+  \]
+  The characteristic polynomial of $A$ is
+  \[
+    \det(A-\lambda I)=\prod_{i=1}^{n}(\lambda_i-\lambda)
+  \]
+  and the roots of this polynomial are exactly 
+  $\lambda_1,\lambda_2,\dots,\lambda_n$. For lower triangular 
+  matrix, we carry out the same proof.
+\end{proof}
+% <==
+% ==> ex6
+\begin{exercise}
+  An operator $A$ is called \emph{nilpoten} if $A^k=\vec{0}$ for 
+  some $k$. Prove that if $A$ is nilpoten, then 
+  $\sigma(A)=\{0\}$.
+\end{exercise}
+\begin{proof}
+  First, we prove that $0$ is an eigenvalue of $A$, that is 
+  $\sigma(A)\neq\varnothing$. Then we show that if 
+  $\lambda\in\sigma(A)$, then $\lambda=0$.
+  \begin{itemize}
+    \item Using the property of determinant, we have
+      \[0=\det(A^k)=(\det A)^k\]
+      hence $\det A=\det(A-0I)=0$. We conclude that 
+      $0\in\sigma(A)$.
+    \item Lastly, let $\lambda\in\sigma(A)$ be an abitrary eigenvalue
+      of $A$. Then there exists $\vec{v}\neq\vec{0}$ such that
+      \begin{align*}
+        &A\vec{v}=\lambda\vec{v}\\\implies\quad
+        &A^2\vec{v}=A\lambda\vec{v}=\lambda A\vec{v}=\lambda^2\vec{v}
+      \end{align*}
+      keep appying this for the total of $k$ times, we'd get
+      $\lambda^k\vec{v}=A^k\vec{v}=\vec{0}$. Since $\vec{v}$ is a non
+      zero vector, we must have $\lambda=0$.
+  \end{itemize}
+\end{proof}
+% <==
+% ==> ex7
+\begin{exercise}
+  Show that the characteristic polynomial of a block triangular
+  matrix \[M:=\begin{pmatrix} A&*\\ \vec{0}&B \end{pmatrix}\]
+  where $A$ and $B$ are square matrices, coincides with 
+  $\det(A-\lambda I)\det(B-\lambda I)$.
+\end{exercise}
+\begin{proof}
+  Let $A':=A-\lambda I$ and $B':=B-\lambda I$. Therefore, the 
+  characteristic polynomial of $M$ is
+  \begin{align*}
+    \det(M-\lambda I)
+    &=\det \begin{pmatrix} A'&*\\\vec{0}&B' \end{pmatrix}\\
+    &=\det(A')\det(B')\\
+    &=\det(A-\lambda I)\det(B-\lambda I)
+  \end{align*}
+  where the second equality comes from the determinant of block 
+  the matrix.
+\end{proof}
+% <==
+% ==> ex8
+\begin{exercise}
+  Let $\vec{v_1},\vec{v_2},\dots,\vec{v_n}$ be a basis in a vector 
+  space $V$. Assume also that the first $k$ vectors 
+  $\vec{v_1},\vec{v_2},\dots,\vec{v_k}$ of the basis are eigenvectors
+  of an operator $A$, corresponding to an eigenvalue $\lambda$. Show
+  that in this basis the matrix of the operator $A$ has block 
+  triangular form 
+  \[\begin{pmatrix}\lambda I_k&*\\\vec{0}&B\end{pmatrix}\]
+  where $I_k$ is $k\times k$ identity matrix and $B$ is some 
+  $(n-k)\times (n-k)$ matrix.
+\end{exercise}
+\begin{proof}
+  Let $\mathcal B=\{\vec{v_1},\dots,\vec{v_n}\}$. To write $A$ in this
+  basis, we need to know what happens to each basis vector. Now, 
+  for the first $k$ vectors, for each $j=1,2,\dots,k$ we have
+  \[
+    A\vec{v_j}=\lambda\vec{v_j}=
+    \begin{pmatrix}0\\\vdots\\\lambda\\\vdots\\0\end{pmatrix}
+    _{\mathcal B}
+  \]
+  where $\lambda$ is at the $j$-th position. And for the others
+  $(n-k)$ vectors, nah we don't really care about them. The matrix 
+  $A$ written in basis $\mathcal B$ would look like
+  \[
+    A=
+    \begin{pmatrix}
+      \lambda_1 & 0 & \cdots & 0 & \\
+      0 & \lambda_2 & \cdots & 0 & \\
+      \vdots & \vdots & \ddots & \vdots & \text{\fbox{what ev}}\\
+      0 & 0 & \cdots & \lambda_n & \\
+        &&&&\\
+        & \text{\fbox{zeros}} &&&\text{\fbox{ $(n-1)$ block}}
+    \end{pmatrix}=
+    \begin{pmatrix}
+      \lambda I_k&*\\\vec{0}&B
+    \end{pmatrix}
+  \]
+\end{proof}
+% <==
+% ==> ex9
+\begin{exercise}
+  Use the two previous exercises to prove that geometric multiplicity
+  of an eigenvalue cannot exceed its algebraic multiplicity.
+\end{exercise}
+\begin{proof}
+  Let $\lambda\in\sigma(A)$ be an arbitrary basis in operator 
+  $A:V\to V$. Suppose that $\vec{v_1},\dots,\vec{v_k}$ be basis 
+  in subspace $\ker(A-\lambda I)$. Then we can complete this 
+  system to a basis in $V$, hence we can let 
+  \[
+    \mathcal B=\{\vec{v_1},\dots,\vec{v_k},\dots, \vec{v_n}\}
+  \]
+  be a basis in $V$ (we implicitely define $\dim V=n$). From the previous
+  exercise, we can write $A$ in that basis $\mathcal B$ as follows
+  \[
+    [A]_{\mathcal B}=
+    \begin{pmatrix}
+      \lambda I_k&*\\\vec{0}&B
+    \end{pmatrix}
+  \]
+  because eigenvalues don't rely on the choise of basis, $\lambda$ is
+  also the root of characteristic polynomial (with variable $x$)
+  \begin{align*}
+    \det(A-xI)
+    &=\det(\lambda I_k-xI_k)\cdot\det(B-xI_{n-k})\\
+    &=(\lambda-x)^k \cdot\det(B-xI)
+  \end{align*}
+  therefore
+  \[
+    \boxed{\text{algebraic mult.}\geq k=\text{geometric mult.}}
+  \]
+\end{proof}
+% <==
+% ==> ex10
+\newpage
+\begin{exercise}
+  Prove that determinant of a matrix $A$ is equals to the
+  product of its eigenvalues (counting multiplicities).
+\end{exercise}
+\begin{proof}
+  Let this square matrix $A=[a]_{jk}$ and  
+  $A':=A-\lambda I=[b]_{jk}$ where $b_{jj}=a_{jj}-\lambda$.
+  As in previous chapter, we defined $\perm(n)$ be to the set of
+  all permutations of $n$ letters. Let $e$ be the indentity
+  permutation in $\perm{n}$, that is $e(j)=j$ for all j, and 
+  $\sign e=1$. Therefore,
+  \begin{align}
+    \label{eq_ch4:decompose_det}
+    \det(A-\lambda I)
+    &=\sum_{\sigma\in\perm n}\sign\sigma\cdot
+    \prod_{j=1}^{n}b_{\sigma(j)j}\notag\\
+    &=(a_{11}-\lambda)(a_{22}-\lambda)\cdots(a_{nn}-\lambda)+q(\lambda)
+  \end{align}
+  where $q(\lambda):=\sum_{\sigma\neq e}\sign\sigma
+  \cdot\prod_{i=1}^{n}a_{\sigma(j)j}$. For any $\sigma\neq e$,
+  there must be at least two letters were swapped. Since all the 
+  variables $\lambda$'s are all on the main diagonal, the polynomial
+  $\prod_{i=1}^{n}a_{\sigma(j)j}$ must have at most $n-2$ degrees.
+  Note also that the coefficient of $\lambda^n$ in this polynomial
+  is $(-1)^n$.
+
+  Let $\lambda_1,\lambda_2,\cdots,\lambda_n$ be all the eigenvalues of
+  $A$, hence they are the roots of $\det(A-\lambda I)$. So
+  \begin{equation}
+    \label{eq_ch4:factor_det}
+    \det(A-\lambda I)=\coef(\lambda^n)\cdot 
+    (\lambda-\lambda_1)(\lambda-\lambda_2)\cdots(\lambda-\lambda_n)
+  \end{equation}
+  Because $\coef(\lambda^n)=(-1)^n$, plugging $\lambda=0$ in equation
+  \eqref{eq_ch4:decompose_det} we'd get
+  \[
+    \boxed{\det A=\lambda_1\lambda_2\cdots\lambda_n}
+  \]
+\end{proof}
+% <==
+% ==> ex11
+\begin{exercise}
+  Prove that trace of a matrix equals to the sum of its
+  eigenvalue.
+\end{exercise}
+\begin{proof}
+  From equation \eqref{eq_ch4:factor_det} in above exercise, 
+  we have
+  \[
+    \det(A-\lambda I)
+    =(-1)^n (\lambda-\lambda_1)(\lambda-\lambda_2)\cdots(\lambda-\lambda_n)
+  \]
+  has $\lambda_1,\dots,\lambda_n$ as root. So by Vietta theorem, 
+  we obtain that the coefficient of $\lambda^{n-1}$ is 
+  \[
+    \coef(\lambda^{n-1})=-\frac{\lambda_1+\lambda_2+\cdots+\lambda_n}{(-1)^n}.
+  \]
+  Now, finding the coefficient of $\lambda^{n-1}$ in equation 
+  \eqref{eq_ch4:decompose_det} is similar to find the coefficient of 
+  $\lambda^{n-1}$ in the polynomial
+  \[p(\lambda):=(a_{11}-\lambda)(a_{22}-\lambda)\cdots(a_{nn}-\lambda),\]
+  and since this polynomial has roots $a_{11},a_{22},\dots,a_{nn}$, using
+  Vietta theorem we'd get
+  \[
+    \coef{\lambda^{n-1}}=-\frac{a_{11}+a_{22}+\cdots+a_{nn}}{(-1)^n}.
+  \]
+  Therefore, we conclude that 
+  \[
+    \boxed{\tr(A)=\sum a_{jj}=\sum \lambda_j}
+  \]
+\end{proof}
+% <==
+
+\section{Diagonalization}
+% ==> ex1
+\begin{exercise}
+  Let $A$ be $n\times n$ matrix. True or false.
+  \begin{enumerate}[label={(\alph*)}]
+    \item $A\tran$ has the same eigenvalues as $A$;
+    \item $A\tran$ has the same eigenvectors as $A$;
+    \item If $A$ is diagonalizable, the so is $A\tran$
+  \end{enumerate}
+\end{exercise}
+\begin{proof}
+  \begin{enumerate}[label={(\alph*)}]
+    \item \textbf{true.} The characteristic polynomial of $A\tran$ is
+      \begin{align*}
+        \det(A\tran-\lambda I)
+        =\det(A-\lambda I)\tran
+        =\det(A-\lambda I)
+      \end{align*}
+      hene $A$ and $A\tran$ have the same eigenvalues.
+    \item \textbf{false.} Not generally true. In fact, we can check this
+      using the example in the text book (page 112). 
+      However, if $A$ is a symmetric matrix ($A\tran=A$), then $A$ and 
+      $A\tran$ have the same eigenvectors.
+    \item \textbf{true.} 
+      Since $A$ and $A\tran$ have the same characteristic polynomial, hence
+      if $\lambda$ is a root, then
+      $\textrm{alg}_A(\lambda)=\textrm{alg}_{A\tran}(\lambda)$, i.e. they have
+      the same number of repeated roots. Because $A$ is diagonalizable, it's only
+      the case that 
+      \[\textrm{alg}_{A}(\lambda)=\textrm{geo}_{A}(\lambda)\] 
+      now it only remains to show that 
+      $\textrm{geo}_{A}(\lambda)=\textrm{geo}_{A\tran}(\lambda)$. Observe that
+      \[ \dim\ker(A-\lambda I) =n-\rank(A-\lambda I) \]
+      and
+      \[ \dim\ker(A\tran-\lambda I) =n-\rank(A\tran -\lambda I) \] 
+      note also that
+      \[
+        \rank(A\tran-\lambda I)=
+        \rank(A-\lambda I)\tran=
+        \rank(A-\lambda I)
+      \]
+      this shows that $\textrm{geo}_{A}(\lambda)=\textrm{geo}_{A\tran}(\lambda)$.
+      Therefore, $A\tran$ is also diagonalizable.
+  \end{enumerate}
+\end{proof}
+% <==
+% ==> ex2
+\begin{exercise}
+  Let $A$ be a square matrix with real entries, and let $\lambda$
+  be its complex eigenvalue. Suppose that $\vec{v}=(v_1,v_2,\dots,v_n)\tran$
+  is a corresponding eigenvector. Prove that the $\overline{\lambda}$ is an
+  eigenvalue of $A$ and that 
+  $A\overline{\vec{v}}=\overline{\lambda}\overline{\vec{v}}$.
+\end{exercise}
+\begin{proof}
+  Let us separate the real and imaginary part of $\vec{v}$ as
+  $\vec{v}=\vec{a}+i\vec{b}$, where 
+  $\vec{a}=(a_1,\dots,a_n)\tran$ and $\vec{b}=(b_1,\dots,b_n)\tran$
+  are real-valued vectors in $\R^n$. Similarly, we also write $\lambda$ as
+  $\lambda=\alpha+i\beta$ where $\alpha,\beta\in\R$.
+  Because $A$ is real and $\lambda$
+  is its eigenvalue, we obtain that
+  \begin{align*}
+    A\vec{v}
+      &=\lambda\vec{v}\\\implies\quad
+    A\vec{a}+iA\vec{b}
+      &=(\alpha+i\beta)(\vec{a}+i\vec{b})\\
+      &=(\alpha\vec{a}-\beta\vec{b})+i(\beta\vec{a}+\alpha\vec{b})
+  \end{align*}
+  Applying complex conjugate on both sides, we get
+  \begin{align*}
+    A\vec{a}-iA\vec{b}
+    &=(\alpha\vec{a}-\beta\vec{b})-i(\beta\vec{a}+\alpha\vec{b})\\
+    \implies\quad A\overline{\vec{v}}
+    &=(\alpha-i\beta)(\vec{a}-i\vec{b})\\
+    &=\overline{\lambda}\overline{\vec{v}}
+  \end{align*}
+\end{proof}
+% <==
+% <==
+% ==> 5. inner product
+\chapter{Inner Product}
+
+\section{Inner product}
+\section{Orthogonality}
+\section{Orthogonal projection}
+% ==> ex12
+\setcounter{exercise}{11}
+\begin{exercise}
+  Show that for a subspace $E$ we have $(E^\perp)^\perp=E$.
+\end{exercise}
+\begin{proof}
+  First note that for any $\vec{e}\in E$, $\vec{e}\perp E^\perp$, hence
+  $E\perp E\perc$. To prove this assertion, we'll prove that each set is
+  a subset of one another.
+  \begin{itemize}
+    \item Let $\vec{x}\in E$. From above reasoning we have 
+      $\vec{x}\perp E\perc$, but this immediately implies that 
+      $\vec{x}\in(E\perc)\perc$ because this set contains all of those 
+      vectors that orthogonal to $E\perc$. Thus, 
+      $E\subseteq (E\perc)\perc$.
+    \item Now suppose that $\vec{y}\in (E\perc)\perc$. We can decompose 
+      $\vec{y}$ as the sum
+      \[\vec{y}=\proj{\vec{y}}{E}+\vec{y_0}\]
+      where $\vec{y_0}\perp E$. Note the inner product
+      $
+        \ang{\vec{y_0,~\vec{y_0}}}=
+        \ang{\vec{y},~\vec{y_0}}-\ang{\proj{\vec{y}}{E},~ \vec{y_0}}.
+      $
+      Since $\vec{y}\perp E\perc,~\vec{y_0}\in E\perc$ their inner product
+      $\ang{\vec{y},~\vec{y_0}}=0$. Similarly since 
+      $\proj{\vec{y}}{E}\in E,~ \vec{y_0}\perp E$, their inner product
+      is also $0$. Hence we obtain that
+      \[\ang{\vec{y_0},~\vec{y_0}}=0\iff \vec{y_0}=\vec{0}.\]
+      This implies that $\vec{y}=\proj{\vec{y}}{E}\in E$ for all 
+      $\vec{y}$. Hence $(E\perc)\perc\subseteq E$.
+  \end{itemize}
+\end{proof}
+% <==
+\newpage
+\section{Least square}
+% ==> ex5
+\setcounter{exercise}{4}
+\begin{exercise}[Minimal norm solution]
+  Let an equation $A\vec{x}=\vec{b}$ has a solution, 
+  and let $A$ has non-trivial kernel (so the solution is
+  not unique.) Prove that
+  \begin{enumerate}[label={(\alph*)}]
+    \item There exist a unique solution $\vec{x_0}$ of $A\vec{x}=\vec{b}$
+      minimizing the norm $\norm{\vec{x}}$, i.e. that there exists 
+      unique $\vec{x_0}$ such that $A\vec{x_0}=\vec{b}$ and 
+      $\norm{\vec{x_0}}\leq\norm{\vec{x}}$ for any $\vec{x}$
+      satisfying $A\vec{x}=\vec{b}$.
+    \item $\vec{x_0}=\proj{\vec{x}}{(\ker A)\perc}$ for any $\vec{x}$
+      satisfying $A\vec{x}=\vec{b}$.
+  \end{enumerate}
+\end{exercise}
+\begin{proof}
+  \text{}
+  \begin{enumerate}[label={(\alph*)}]
+    \item 
+      Let $V$ be the domain space of $A$, and let $\mathcal S\subset V$
+      be the set of all solution of $A\vec{x}=\vec{b}$. 
+      Let arbitrary $\vec{w}\in\mathcal S$, and denote 
+      $\vec{x_0}\in(\ker A)\perc$ be its projection onto subspace 
+      $(\ker A)\perc$. By decomposition, we obtain that there is 
+      $\vec{x_h}\in ((\ker A)\perc)\perc=\ker A$, such that
+      \begin{align*}
+        \vec{w}&=\vec{x_0}+\vec{x_h} \\ \implies\quad 
+        A\vec{x_0}&=A\vec{w}-A\vec{x_h}=\vec{b}-\vec{0}=\vec{b}
+      \end{align*}
+      So $\vec{x_0}\in(\ker A)\perc$ is also a solution of the above 
+      equation ($\vec{x_0}$ is a more special root than our 
+      regular $\vec{w}$). 
+
+      \hspace{1em}
+      In words, there exists a solution $\vec{x_0}$ such that 
+      $\vec{x_0}\in(\ker A)\perc$. If $\vec{x_0}=\vec{0}$, 
+      the above inequality is true. So from now on, we only 
+      consider when $\vec{x_0}\neq \vec{0}$.
+      Note that, for any general solution $\vec{x}\in\mathcal S$ 
+      can be written as $\vec{x}=\vec{x_0}+\vec{e}$ for some vector 
+      $\vec{e}\in\ker A$ (proved in chapter 2). Then
+      \begin{align*}
+        \norm{\vec{x_0}}^2
+        &=\ang{\vec{x_0},\vec{x_0}}
+        =\ang{\vec{x}-\vec{e},~ \vec{x_0}}\\
+        &=\ang{\vec{x},\vec{x_0}}-\ang{\vec{e},\vec{x_0}}\\
+        &=\ang{\vec{x},\vec{x_0}}
+        &&\text{(because $\vec{x_0}\perp\vec{e}$)}\\
+        &\leq \norm{\vec{x}}\cdot\norm{\vec{x_0}}
+        &&\text{(using Cauchy--Schwarz)}
+      \end{align*}
+      divided both sides by $\norm{\vec{x_0}}\neq 0$, we get the desired 
+      inequality $\norm{\vec{x_0}}\leq\norm{\vec{x}}$ for any 
+      $\vec{x}\in\mathcal S$.
+    \item Let $\vec{w_1}, \vec{w_2}\in\mathcal S$ be solutions of 
+      $A\vec{x}=\vec{b}$. We wish to show that their projection 
+      $P\vec{w_1}$ and $P\vec{w_2}$ onto $(\ker A)\perc$ are the same.
+      Because $(\ker A)\perc$ is itself a subspace, then 
+      \begin{equation}
+        P\vec{w_1}-P\vec{w_2}\in(\ker A)\perc.
+      \end{equation}
+      Because $P\vec{w_1},P\vec{w_2}$ are projections, we obtain that 
+      there exists $\vec{e_1},\vec{e_2}\in((\ker A)\perc)\perc=\ker A$,
+      such that
+      \[ \vec{w_1}=P\vec{w_1}+\vec{e_1} \] and
+      \[ \vec{w_2}=P\vec{w_2}+\vec{e_2}. \]
+      Substracting these two equations, and applying $A$ from both sides,
+      we get
+      \begin{align*}
+        A(P\vec{w_1}-P\vec{w_2})
+        &= A\vec{w_1}-A\vec{w_2}-A\vec{e_1}+A\vec{e_2}\\
+        &= \vec{b}-\vec{b}-\vec{0}+\vec{0}=\vec{0}.
+      \end{align*}
+      This implies that 
+      \begin{equation}
+        P\vec{w_1}-P\vec{w_2}\in \ker A.
+      \end{equation}
+      But $\ker A \oplus(\ker A)\perc=V$, hence 
+      $(\ker A)\cap(\ker A)\perc=\{\vec{0}\}$ therefore
+      \[ P\vec{w_1}-P\vec{w_2}\in(\ker A)\cap(\ker A)\perc=\{0\} \]
+      and thus $P\vec{w_1}=P\vec{w_2}$ as expected.
+  \end{enumerate}
+\end{proof}
+% <==
+% <==
 
 
 
