definition of quadratic ring

--- a/preamble.tex
+++ b/preamble.tex
@@ -51,6 +51,8 @@
 
 \def\L{\mathcal L}
 \def\U{\mathcal U}
+\def\i{\mathrm i}
+\def\e{\mathrm e}
 
 \def\labelitemi{$\circ$}
 \def\inv{^{-1}}
@@ -106,6 +108,8 @@
 
 % <== end: math
 % ==> figure, geometry
+\usepackage[inline]{asymptote}
+\def\asydir{asydir}
 \usepackage{tikz}
 \usetikzlibrary{arrows, calc, angles, quotes}
 % <==
