--- a/linear-algebra/td.tex
+++ b/linear-algebra/td.tex
@@ -1,6 +1,11 @@
 
+\documentclass{article}
+% !TeX root = ../preamble.tex
+
+
 % ==> preamble
 \input{../preamble.tex}
+
 
 \renewcommand{\thesection}{\arabic{section}.}
 \renewcommand{\theexercise}{\arabic{section}.\arabic{exercise}}
@@ -2959,6 +2964,7 @@ multiplication (as proved above).
 \end{proof}
 % <==
 % <==
+
 
 
 
